# text-game

./: CMakeLists.txt  README.md
.cache/clangd/index/: Config.h.A09578AF70F4E728.idx  Config.h.DEB846BF5D8C7B63.idx  main.cpp.CDC4D737D9D1761F.idx  main.cpp.FC52EE294629458B.idx  test.h.87E86E5A9FB39215.idx
src/: main.cpp  test.cpp  test.h
